# kea

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  FORMAL.md  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  mise.toml
.config/: nextest.toml
.github/workflows/: bench-codspeed.yml  bench-programs-stage-b-stable.yml  bench-programs-stage-b.yml  bench-programs-variance.yml  bench-stage-a.yml  bench-stage-b-stable.yml  bench-stage-b.yml  bench-variance.yml  ci.yml
BRIEFS/: 0E-REMEDY-NOTE.md  ADVERSARIAL-TEST-NOTE.md  IDIOMATIC-STDLIB-NOTE.md  INDEX.md  MEMORY-OPT-NOTE.md  PRACTICAL-GAPS-NOTE.md  STDLIB-BOOTSTRAP-NOTE.md  SYNTAX-NOTE.md  TYPE-AS-TRAIT-NOTE.md
BRIEFS/design/: 0e-runtime-effects.md  0f-memory-model.md  0g-advanced-types.md  0h-stdlib-errors.md  benchmark-infrastructure.md  callback-stacking.md  distributed-actors.md  effects-platform-vision.md  ir-recipes-grammar-convergence.md  live-code-loading.md  package-registry.md  packaging-ffi-comptime.md  performance-backend-strategy.md  revision-preserving-evolution.md  runtime-introspection-mcp.md  self-hosting-perf.md  serialization.md  testing.md  tooling-dx.md  typed-grammar-interface.md
BRIEFS/done/: 0a-lexer-parser.md  0b-mcp-server.md  0b-rill-surface-cleanup.md  0b-type-system-core.md  0c-effect-handlers.md  0d-codegen-pure.md  0d1-module-system.md  0e-remedy.md  0e-runtime-effects.md  benchmark-infrastructure.md  bootstrap-infra.md  const-fields.md  idiomatic-stdlib-pass.md  pure-arrow-enforcement.md  string-interpolation.md  syntax-grammars.md  syntax-migration-rill-to-kea.md  tier4-continuations.md  with-syntax.md
BRIEFS/in-progress/: 0a-lexer-parser.md  0b-rill-surface-cleanup.md  0b-type-system-core.md  0c-effect-handlers.md  0d-codegen-pure.md  0d1-module-system.md  0e-remedy.md  0e-runtime-effects.md  0f-memory-model.md  adversarial-test-pass.md  benchmark-infrastructure.md  const-fields.md  handler-tiers-3-4.md  lean-formalization.md  practical-language-gaps.md  stdlib-bootstrap.md  string-interpolation.md
BRIEFS/todo/: 0a-lexer-parser.md  0b-mcp-server.md  0b-rill-surface-cleanup.md  0b-type-system-core.md  0c-effect-handlers.md  0d-codegen-pure.md  0d1-module-system.md  0e-runtime-effects.md  0f-memory-model.md  0g-advanced-types.md  0h-stdlib-errors.md  adversarial-test-pass.md  algorithm-gallery.md  idiomatic-stdlib-pass.md  lean-formalization.md  phase-1-self-hosting.md  phase-1a-ffi.md  phase-1bc-compiler-in-kea.md  phase-1d-compiler-improvements.md  practical-language-gaps.md  stdlib-bootstrap.md  syntax-grammars.md  testing.md  tier4-continuations.md  with-syntax.md
benchmarks/baselines/: microbench-thresholds-stable.csv  microbench-thresholds.csv  program-bench-thresholds-stable.csv  program-bench-thresholds.csv  reuse-token-floors-stable.csv
benchmarks/programs/: alloc_chain.kea  case_chain.kea  fib.kea  matmul.kea  quicksort.kea  sieve.kea
crates/kea/: Cargo.toml
crates/kea-ast/: Cargo.toml
crates/kea-bench/: Cargo.toml
crates/kea-bench/benches/: core.rs
crates/kea-bench/src/: lib.rs
crates/kea-codegen/: Cargo.toml
crates/kea-codegen/src/: lib.rs
crates/kea-diag/: Cargo.toml
crates/kea-infer/: Cargo.toml
crates/kea-infer/proptest-regressions/: prop_tests.txt
crates/kea-infer/src/: exhaustive.rs  lib.rs  prop_tests.rs  trace.rs  typeck.rs  typeck_tests.rs
crates/kea-infer/tests/: diagnostic_snapshots.rs
crates/kea-infer/tests/snapshots/: diagnostic_snapshots__category_metadata.snap  diagnostic_snapshots__e0001_type_mismatch.snap  diagnostic_snapshots__e0002_missing_field.snap  diagnostic_snapshots__e0011_extra_field.snap  diagnostic_snapshots__e0013_record_row_mismatch_fn_arg.snap  diagnostic_snapshots__e0014_effect_row_mismatch_custom.snap  diagnostic_snapshots__e0014_effect_row_mismatch_io_to_io_net.snap  diagnostic_snapshots__e0014_effect_row_mismatch_pure_to_io_fail.snap
crates/kea-mcp/: Cargo.toml
crates/kea-mcp/src/: lib.rs  main.rs
crates/kea-runtime/: Cargo.toml  build.rs
crates/kea-runtime/benches/: runtime_pool.rs
crates/kea-runtime/src/: fiber.rs  fiber_asm_aarch64.s  fiber_asm_aarch64_linux.s  fiber_asm_x86_64.s  fiber_asm_x86_64_macos.s  lib.rs
crates/kea/runtime/: kea_aot_runtime.c
crates/kea/src/: compiler.rs  lib.rs  main.rs  main_tests.rs  mcp.rs  package.rs
crates/kea/tests/: cli_stdout.rs
crates/kea/tests/algorithms/: binary_search.kea  champ.kea  dot_product.kea  fnv1a.kea  insertion_sort.kea  lru_cache.kea  matrix_multiply.kea  merge_sort.kea  priority_queue.kea  quicksort.kea  ring_buffer.kea  sieve.kea  string_find.kea  utf8_validate.kea  welford.kea
crates/kea/tests/stdlib_cases/: char_tests.kea  clock_tests.kea  core_asserts.kea  eq_tests.kea  float_tests.kea  int_tests.kea  io_tests.kea  list_asserts.kea  list_tests.kea  net_tests.kea  option_tests.kea  ord_tests.kea  order_tests.kea  par_tests.kea  prelude_tests.kea  rand_tests.kea  result_asserts.kea  result_tests.kea  show_tests.kea  test_tests.kea  text_tests.kea  yield_tests.kea
docs/: COMPILER-AS-DATA.md  COMPOSITION.md  DESIGN-SYSTEM.md  EFFECTS-ORIENTED.md  EXAMPLES.md  IDIOMS.md  INDEX.md  PEDAGOGY.md  REPL.md  UNIVERSAL-DOT.md  VALUES-AND-COMPOSITION.md  VISION.md
formal/: Kea.lean  ROADMAP.md  lakefile.toml  mcp-log.md
keadocs/: CLASS-MAP.md  GENERATOR-BRIEF.md
scripts/: bench-export.sh  bench-program-threshold-check.sh  bench-programs-variance.sh  bench-programs.sh  bench-reuse-floor-check.sh  bench-threshold-check.sh  bench-update-fusion-contract.sh  bench-variance.sh  cargo-agent.sh  lint-changed.sh  run-program-bench.sh  test-changed.sh  with-rust-cache.sh
stdlib/: char.kea  clock.kea  codec.kea  decode.kea  encode.kea  eq.kea  ffi.kea  float.kea  foldable.kea  hash.kea  http.kea  int.kea  io.kea  iterator.kea  list.kea  log.kea  map.kea  net.kea  option.kea  ord.kea  order.kea  par.kea  prelude.kea  rand.kea  reader.kea  result.kea  show.kea  sorted_map.kea  sorted_set.kea  state.kea  stream.kea  test.kea  text.kea  vector.kea  yield.kea
tree-sitter-kea/: .gitignore  grammar.js  package-lock.json  package.json  tree-sitter.json
(+140 files in other folders)
