[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cigrainger/kea"

[workspace.dependencies]
# Workspace crates
kea-ast = { path = "crates/kea-ast" }
kea-diag = { path = "crates/kea-diag" }
kea-syntax = { path = "crates/kea-syntax" }

# Diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
ariadne = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
insta = { version = "1", features = ["yaml"] }
proptest = "1"

# Codegen (future)
# cranelift-codegen = "0.116"
# cranelift-frontend = "0.116"
# cranelift-module = "0.116"
