[package]
name = "kea-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
kea.workspace = true
kea-ast.workspace = true
kea-hir.workspace = true
kea-mir.workspace = true
kea-codegen.workspace = true
kea-types.workspace = true
kea-syntax.workspace = true
kea-infer.workspace = true

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "4.3.0" }

[[bench]]
name = "core"
harness = false
