[package]
name = "kea-codegen"
description = "Backend interface and Cranelift backend scaffold for Kea MIR"
edition.workspace = true
version.workspace = true

[dependencies]
kea-mir.workspace = true
kea-hir.workspace = true
kea-types.workspace = true
cranelift.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-object.workspace = true
thiserror.workspace = true

[dev-dependencies]
kea-ast.workspace = true
