[package]
name = "kea-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam-deque = "0.8"
rayon = "1"
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
cc = "1"

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "runtime_pool"
harness = false
